--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "apexcharts": "^3.44.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
